# esp-agent

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  FEATURE_SUPPORT.md  MIGRATION_PLAN.md  README.md  SANDBOX_SECURITY.md  TASK_mcp_capabilities.md  _cross_build.sh  _package_all.sh  _package_appimage.sh  _package_arch.sh  _package_flatpak.sh  _package_linglong.sh  _package_rpm.sh  _run_desktop.bat  _run_desktop.sh  build_all.bat  esp-agent  esp-claw_overall.md  main_desktop.c  package.bat  package.sh  resources.rc  wrangler.jsonc
.github/workflows/: deploy-pages.yml
android/: .gitignore  bootstrap.bat  build.gradle.kts  build_third_party.bat  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/284_240/: layout.json
android/app/src/main/assets/defaults/skills/cap_emote_text/: SKILL.md
android/app/src/main/assets/defaults/skills/cap_lua/: SKILL.md
android/app/src/main/assets/defaults/skills/lua_module_capability/: SKILL.md
android/app/src/main/assets/defaults/skills/profile_memory_ops/: SKILL.md
android/app/src/main/assets/fonts/: .gitkeep
android/app/src/main/java/com/crushclaw/: ChannelConfigActivity.kt  ClawDocumentsProvider.java  ConfigActivity.kt  CrushClawApp.kt  FloatingWindowService.kt  HttpTransport.java  MainActivity.kt  NativeBridge.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/jni/: android_entry.c  android_hal_stubs.c  builtin_font_8x16.h  desktop_main_android.c  display_hal_android.c  display_hal_android.h  esp_http_client_android.c  esp_http_client_stub.c  esp_websocket_client_android.c  esp_websocket_client_stub.c  font_android.c  font_android.h  http_transport_android.c  lua_module_input_android_stub.c  png.h
arch/: PKGBUILD  crush-claw.install
cli/: crush_claw_cli.c  esp_agent_cli.c
cmake/: toolchain-armhf.cmake  toolchain-i686.cmake
components/: README.md
components/desktop/: CMakeLists.txt  README.md
components/desktop/include/: component_desktop.h  lua_module_input.h
components/desktop/src/: cap_input.c  lua_module_input.c
components/include/: component_extensions.h
defaults/: skills_list.json
defaults/skills/: cap_im_feishu.md  cap_im_qq.md  cap_im_tg.md  cap_im_wechat.md  cap_llm_inspect.md  cap_lua_edit.md  cap_lua_list.md  cap_lua_patterns.md  cap_lua_run.md  cap_router_mgr.md  cap_scheduler.md  cap_time.md  cap_web_search.md  lua_module_board_manager.md  lua_module_capability.md  lua_module_delay.md  lua_module_display.md  lua_module_event_publisher.md  lua_module_input.md  lua_module_storage.md  lua_module_system.md  lua_runner.md  memory_ops.md  profile_memory_ops.md  skills_list.json  weather.md
defaults/skills/lua_module_board_manager/: SKILL.md
defaults/skills/lua_module_capability/: SKILL.md
defaults/skills/lua_module_delay/: SKILL.md
defaults/skills/lua_module_display/: SKILL.md
defaults/skills/lua_module_input/: SKILL.md
defaults/skills/lua_module_storage/: SKILL.md
flatpak/: io.github.zz6zz666.crush-claw.yml
installer/: setup.iss
installer/assets/: svg2ico.py
linglong/: linglong.yaml
packaging/DEBIAN/: control  postinst  prerm
packaging/usr/lib/systemd/user/: crush-claw.service  esp-agent.service
packaging/usr/share/applications/: crush-claw.desktop
packaging/usr/share/crush-claw/assets/284_240/: config.json  index.json  offline.eaf  swim.eaf
packaging/usr/share/crush-claw/defaults/: config.json
packaging/usr/share/crush-claw/defaults/skills/: file_ops.md  lua_runner.md
packaging/usr/share/crush-claw/defaults/skills/cap_screenshot/: SKILL.md
packaging/usr/share/crush-claw/defaults/skills/lua_module_event_publisher/: SKILL.md
packaging/usr/share/crush-claw/defaults/skills/lua_module_system/: SKILL.md
packaging/usr/share/doc/crush-claw/: README.md
packaging/usr/share/doc/esp-agent/: README.md
packaging/usr/share/esp-agent/defaults/: config.json
packaging/usr/share/esp-agent/defaults/skills/: file_ops.md  memory_ops.md  skills_list.json
rpm/: crush-claw.spec
sim_hal/: aes_stub.c  base64.c  camera_stub.c  cap_emote_text.c  cap_lua_sandbox.c  cap_screenshot.c  console_unix.c  display_sdl2.c  emote_stub.c  esp_board_manager_stub.c  esp_http_client.c  esp_lcd_panel_stub.c  esp_log.c  esp_mcp_stubs.c  esp_mmap_assets_stub.c  esp_websocket_client.c  freertos_shim.c  http_curl.c  lv_font_stub.c  memstream_stub.c  nvs.c  nvs_stub.c  platform_utils.c  stdout_wrapper.c  tray_icon.c  tray_icon_linux.c
sim_hal/assets/284_240/: emote.json
sim_hal/include/: bsd_strings.h  cap_screenshot.h  display_hal_input.h  display_screenshot.h  esp_jpeg_dec.h  heatshrink_decoder.h  mingw_compat.h  nvs.h  qrcode_wrapper.h  qrcodegen.h  sdkconfig.h  tray_icon.h
sim_hal/include/argtable3/: argtable3.h
sim_hal/include/driver/: gpio.h
sim_hal/include/esp/: adc_stub.h  cap_lua_sandbox.h  esp_attr.h  esp_board_manager_includes.h  esp_check.h  esp_chip_info.h  esp_console.h  esp_crt_bundle.h  esp_err.h  esp_event.h  esp_heap_caps.h  esp_http_client.h  esp_http_server.h  esp_lcd_panel_io.h  esp_lcd_panel_ops.h  esp_lcd_touch.h  esp_lcd_types.h  esp_log.h  esp_netif.h  esp_netif_sntp.h  esp_random.h  esp_rom_sys.h  esp_sntp.h  esp_system.h  esp_timer.h  esp_vfs_fat.h  esp_websocket_client.h  esp_wifi.h  gpio_stub.h  i2c_stub.h  mdns.h  nvs_flash.h  spi_stub.h
sim_hal/include/freertos/: FreeRTOS.h  event_groups.h  idf_additions.h  portmacro.h  projdefs.h  queue.h  semphr.h  task.h
sim_hal/include/lib/qrcode/: qrcode_wrapper.h
sim_hal/include/lwip/: ip_addr.h
sim_hal/include/mbedtls/: aes.h  base64.h  md5.h
sim_hal/include/platform/: platform.h  platform_posix.h  platform_win32.h
sim_hal/include/soc/: ext_mem_defs.h  soc_caps.h  soc_memory_layout.h
site/: _config.yml  index.html
site/css/: style.css
site/i18n/: en.json  zh.json
site/js/: app.js
(+1 files in other folders)
